name:                 chtt
version:              0.1.0.0
synopsis:             CH Test Task
-- description:
-- license:
-- license-file:
homepage:             
author:               Vyacheslav Vorobyov
maintainer:           vjache@gmail.com
category:             Distribution
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable chtt
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, distributed-process >= 0.6.6, distributed-process-simplelocalnet, network-transport-tcp, random >= 1.1 && <2.0, time, old-locale, binary, containers
  hs-source-dirs:       src
  default-language:     Haskell2010
